Update Download a pdf using Python.ipynb

--- a/Download a pdf using Python.ipynb
+++ b/Download a pdf using Python.ipynb
@@ -275,7 +275,7 @@
     "# Iter_content: See docstring\n",
     "file_path=\"/home/naman/Desktop/Python docs/PDFs Downloaded via python/A simple PDF.pdf\"\n",
     "os.system(\"open\"+\"{}\".format(file_path))   # to open the file automatially in the default pdf viewer of the system\n",
-    "\n",
+    "\n", # Windows users change"/"to"\"
     "print(\"Your pdf file is downloaded... and it is opening in the default PDF viewer of your system.\")\n",
     "\n",
     "\"\"\"\n",
